k8s/kubearmor-demo-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubearmor-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubearmor-demo
  template:
    metadata:
      labels:
        app: kubearmor-demo
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
