k8s/network-test-allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test-allow
  namespace: openshell
  labels:
    app.kubernetes.io/name: openshell
    app.kubernetes.io/instance: openshell
spec:
  restartPolicy: Never
  containers:
    - name: test
      image: busybox:1.36
      command:
        - /bin/sh
        - -c
        - "sleep 3600"
