k8s/network-test-deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test-deny
  namespace: default
spec:
  restartPolicy: Never
  containers:
    - name: test
      image: busybox:1.36
      command:
        - /bin/sh
        - -c
        - "sleep 3600"
