k8s/fuse-ssh-server-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshfs-server-nodeport
  namespace: fuse-lab
spec:
  type: NodePort
  selector:
    app: sshfs-server
  ports:
    - name: ssh
      port: 2222
      targetPort: ssh
      nodePort: 32222
